書き換えました
文字化け対策と説明と各種画像
ラベル４はそのまま

--- a/rei.html
+++ b/rei.html
@@ -1,41 +1,57 @@
 <html>
     <head>
+        <title>首都大南大沢</title>
+        <meta http-equiv="content-type" charset="utf-8">
         <link rel="stylesheet" href="rei1.css">
     </head>
     <body>
        <br>
         <h1>
-            ゆっくりしていけ...
+            首都大南大沢
         </h1>
         <div class="accbox">
                 <!--ラベル1-->
-                  <label for="label1">クリックして表示1</label>
+                  <label for="label1">生協と学食</label>
                   <input type="checkbox" id="label1" class="cssacc" />
                   <div class="accshow">
                     <!--ここに隠す中身-->
                     <p>
-                      こんにちは1
+                      生協と学食の開店スケジュール
                     </p>
+                    <img src="gokusyoku.jpg">
                   </div>
                   <!--//ラベル1-->
                 <!--ラベル2-->
-                  <label for="label2">クリックして表示2</label>
+                  <label for="label2">図書館</label>
                   <input type="checkbox" id="label2" class="cssacc" />
                   <div class="accshow">
                     <!--ここに隠す中身-->
                     <p>
-                      こんにちは2
+                      図書館の開館スケジュール
                     </p>
+                    <img src="LibEx.jpg">
+                    <img src="Lib10.jpg">
                   </div>
                   <!--//ラベル2-->
                 <!--ラベル3-->
-                  <label for="label3">クリックして表示3</label>
+                  <label for="label3">情報処理室</label>
                   <input type="checkbox" id="label3" class="cssacc" />
                   <div class="accshow">
                     <!--ここに隠す中身-->
                     <p>
-                      こんにちは3
+                      情報処理室の開放スケジュール
                     </p>
+                    <p>月曜日</p>
+                    <img src="Mon.jpg">
+                    <p>火曜日</p>
+                    <img src="Tues.jpg">
+                    <p>水曜日</p>
+                    <img src="Wed.jpg">
+                    <p>木曜日</p>
+                    <img src="Thu.jpg">
+                    <p>金曜日</p>
+                    <img src="Fri.jpg">
+                    <p>※土日は開放していません。</p>
                   </div>
                   <!--//ラベル3-->
                 <!--ラベル4-->
